--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,7 @@
     <body>
         <nav>
         <div class="logoTop">
-            <a href=""><img src="{{ asset('images/logo.png') }}" alt="logo site"></a>
+            <a href="{{path('home')}}"><img src="{{ asset('images/logo.png') }}" alt="logo site"></a>
         </div>
 
         <ul class="nav-list" id="nav-list">
