--- a/templates/wine/wine.html.twig
+++ b/templates/wine/wine.html.twig
@@ -23,8 +23,8 @@
                 <h2>{{ wine.name }}</h2>
                 <p>{{ wine.year }}</p>
                 <p>{{ wine.grapes }}</p>
-                <p>{{ wine.region.name }}</p>
-                <p>{{ wine.country.name }}</p>
+                <p>{{ wine.regions.name }}</p>
+                <p>{{ wine.countries.name }}</p>
                 
                 <!-- Description courte -->
                 <p id="bouteille-description-{{ wine.id }}">
