--- a/templates/myCellar/userCellar.html.twig
+++ b/templates/myCellar/userCellar.html.twig
@@ -14,17 +14,46 @@
     {% else %}
     <h2>Welcome to {{ cellar.user.username }}’s cellar</h2>
     <h1>{{ cellar.name }}</h1>
-    <div class="bouteille-list">
+    <section id="liste">
+        <div class="cards">
         {% for wine in wines %}
-        <article class="bottle">
-            <img src="{{ asset('uploads/images/' ~ wine.imageName) }}"
-                alt="{{ wine.name }}">
-            <h2>{{ wine.name }}</h2>
-            <p>Year: {{ wine.year }}</p>
-            {# etc… #}
-        </article>
+            <div class="card">
+                
+                <h2>{{ wine.name }}</h2>
+                <p>{{ wine.year }}</p>
+                <p>{{ wine.grapes }}</p>
+                <p>{{ wine.regions.name }}</p>
+                <p>{{ wine.countries.name }}</p>
+                
+                <!-- Description courte -->
+                <p id="bouteille-description-{{ wine.id }}">
+                    {{ wine.description|slice(0, 100) }}... 
+                    <button onclick="toggleDescription({{ wine.id }})">Expand</button>
+                </p>
+
+                <!-- Description complète -->
+                <p id="bouteille-description-full-{{ wine.id }}" style="display:none;">
+                    {{ wine.description }}
+                    <button onclick="toggleDescription({{ wine.id }})">Reduce</button>
+                </p>
+                <div class="actions">
+                {# {# {% if is_granted("ROLE_USER", "ROLE_ADMIN") %}
+                    <a class="add" href="{{ path('addWine', {'id': wine.id}) }}">Add to cellar</a> 
+                {% endif %}
+                {% if is_granted('ROLE_ADMIN') or (app.user and app.user.id == wine.user.id) %}
+                    <a class="modifier" href="{{ path('app_wine_change', {'id': wine.id}) }}">Modifier</a> 
+                    <form method="POST" onsubmit="return confirm('Confirmer la suppression?')" action="{{ path('delete_wine', {'id': wine.id}) }}">
+                        <input type="hidden" name="_method" value="delete">
+                        <input type="hidden" name="_token" value="{{ csrf_token('SUP' ~ wine.id) }}">
+                        <button class="supprimer">Supprimer</button>
+                    </form>
+                {% endif %} #}
+                </div>         
+            </div>
+            
         {% endfor %}
-    </div>
+        </div>
+    </section>
     {% endif %}
     
 </main>
