--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -123,29 +123,56 @@ a{
     }
 }
 .filter-form{
-    width: 100%;
+    width: 40%;
     height: auto;
+    margin: auto;
     background-color: v.$primary-color;
+    border-radius: 10px;
     
-    form{
+    .wine-filter{
        text-align: center;
        margin: 1rem;
        input{
         margin: 1rem;
         height: 2rem;
         width: 300px;
+        border-radius: 20px;
        }
        select{
         margin: 1rem;
         height: 2rem;
         width: 300px;
+        border-radius: 20px;
        }
        button{
         margin: 1rem;
         height: 2rem;
         width: 300px;
         cursor: pointer;
+        background-color: v.$grey;
+        border-radius: 20px;
+        border: none;
+       }
+       button:hover{
+        background-color: v.$colorSecondary;
        }
       
+    }
+}
+.btn{
+    display: block;
+    width: 80%;
+    background-color: v.$colorPrimary;
+    color: white;
+    padding: 0.7rem;
+    border: none;
+    border-radius: 12px;
+    font-weight: bold;
+    font-size: 1.1rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
+    &:hover {
+        background-color: black;
     }
 }
