--- a/assets/styles/_cellars.scss
+++ b/assets/styles/_cellars.scss
@@ -27,25 +27,17 @@
     .card {
         @include m.card;
         background-color: white;
+        height: 40
+        ;
         .modifier{
             color: black;
         }
         .add{background-color: v.$grey; border-radius: 10px;}
     }
 }
-.pagination{
-    display: flex;
-    justify-content: center;
-    scale: 1.5;
-    margin-top: 2rem;
-    gap: 0.5rem;
-    .first,.previous,.page,.current{
-    }
-    .current{
-        border: 2px solid v.$colorPrimary;
-        border-radius: 50%;
-        text-align: center;
-        padding: 0 0.5rem;
-        background-color: v.$grey;
-    }
+.btn{
+    width: 10%;
+    text-align: center;
+    margin: auto;
+    background-color: v.$grey;
 }
