--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -22,7 +22,7 @@ a{
     h1{
         font-size: 2.5rem;
         margin: 0rem;
-        padding-top: 3rem;
+        padding-top: 10%;
         text-shadow: 0px 3px 3px white;
     }
     h2{
